[gd_scene load_steps=8 format=3 uid="uid://chhe5qj35dl0b"]

[ext_resource type="Script" path="res://Scenes/Weapons/Blaster/Blaster.gd" id="1_43xb4"]
[ext_resource type="Texture2D" uid="uid://tl6ufo75r4ti" path="res://Assets/Sprites/fire.png" id="2_8u2gq"]
[ext_resource type="AudioStream" uid="uid://dj160wno4clem" path="res://Assets/Audio/shots/pistol.wav" id="3_vkwr1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7oird"]
size = Vector2(9.5, 17)

[sub_resource type="Animation" id="Animation_j1aiq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShootingSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_c1bq4"]
resource_name = "shoot"
length = 0.14
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShootingSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(2, 0), Vector2i(1, 0), Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShootingSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.14),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4uelt"]
_data = {
"RESET": SubResource("Animation_j1aiq"),
"shoot": SubResource("Animation_c1bq4")
}

[node name="Blaster" type="Area2D"]
texture_filter = 1
collision_layer = 8
collision_mask = 16
script = ExtResource("1_43xb4")

[node name="BlasterCollision" type="CollisionShape2D" parent="."]
position = Vector2(0.25, 8.5)
shape = SubResource("RectangleShape2D_7oird")

[node name="GunEnd" type="Marker2D" parent="."]
position = Vector2(0, 17)

[node name="ShootingSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 21)
rotation = 3.14159
texture = ExtResource("2_8u2gq")
hframes = 4

[node name="ShootingAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4uelt")
}

[node name="GunCooldown" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="BlasterShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vkwr1")
bus = &"Sound FX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
